Apply IntelliJ inspection cleanup with false positives filtered